Fix overflow issue when text is zoomed

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -15,7 +15,7 @@ header {
 .header-nav {
     display: grid;
     align-items: center;
-    grid-template-columns: 2fr 1fr 15%;
+    grid-template-columns: 2fr 1fr 20%;
     grid-template-rows: 1fr;
     margin-top: 20px;
 
